fix(@clayui/css): update footer spacing in the modal

--- a/packages/clay-css/src/scss/variables/_modals.scss
+++ b/packages/clay-css/src/scss/variables/_modals.scss
@@ -149,8 +149,8 @@ $modal-footer-border-width: $modal-header-border-width !default;
 $modal-footer-box-shadow: null !default;
 $modal-footer-color: null !default;
 $modal-footer-height: null !default;
-$modal-footer-padding-x: 0.75rem !default;
-$modal-footer-padding-y: 0.75rem !default;
+$modal-footer-padding-x: 1.25rem !default;
+$modal-footer-padding-y: 1rem !default;
 
 $modal-footer-height-mobile: null !default;
 
